# eulerian_motion_guidance

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml  keypoint_portrait.yaml  trajectory_webvid.yaml
scripts/: animate.py  download_portrait.py  download_pretrained.py  download_webvid.py  evaluate.py  train.py  validate.py
src/emg/: __init__.py
src/emg/data/: __init__.py  download.py  portrait.py  trajectory_utils.py  transforms.py  webvid.py
src/emg/evaluation/: __init__.py  evaluator.py  metrics.py
src/emg/inference/: __init__.py  autoregressive.py
src/emg/losses/: __init__.py  diffusion.py  geometric.py
src/emg/models/: __init__.py  flow_controlnet.py  motion_adapter.py  raft_wrapper.py  s2d.py  svd_wrapper.py
src/emg/motion/: __init__.py  eulerian.py  parallel_flow.py  warping.py
src/emg/training/: __init__.py  ema.py  scheduler.py  trainer.py
src/emg/utils/: __init__.py  config.py  distributed.py  logging.py  visualization.py
tests/: conftest.py  test_cycle_energy.py  test_dataloader.py  test_occlusion_mask.py  test_parallel_flow.py  test_warping.py
